<resources>
    <string name="app_name">Github User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_user">Nama Akun</string>
    <string name="searchbar_hint">Masukan Kata</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="image">Gambar user</string>
    <string name="login">[username]</string>
    <string name="tablayout">tabLayout</string>
    <string name="follower_amount">Follower : %d</string>
    <string name="following_amount">Following : %d</string>
    <string name="favorite_github">favorite github</string>
    <string name="delete">hapus</string>
    <string name="change">ubah</string>
    <string name="update">update</string>
    <string name="add">add</string>
    <string name="save">save</string>
    <string name="title">name</string>
    <string name="avatar_url">avatar url</string>
    <string name="empty">kosong</string>
    <string name="changed">ubah</string>
    <string name="added">ditambahkan</string>
    <string name="favorite_list">list favorite user</string>
    <string name="dark_theme">dark theme</string>
    <string name="dark_mode">Dark Mode</string>
</resources>